--- a/SWallet-API/appsettings.json
+++ b/SWallet-API/appsettings.json
@@ -18,5 +18,11 @@
     "Host": "smtp.gmail.com",
     "Username": "lenhathuy29042003@gmail.com",
     "Password": "rfgs ohuh zxeo ebpt"
+  },
+
+  "Cloudinary": {
+    "CloudName": "swallet",
+    "ApiKey": "535856374516477",
+    "ApiSecret": "Vi_sGXv-xojtyOu3oijB9zzmm7s"
   }
 }
