--- a/SWallet-API/appsettings.json
+++ b/SWallet-API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=(local); database =SWalletDB ;uid=sa;pwd=12345;TrustServerCertificate=true"
+    "DefaultConnection": "server=160.191.244.210,1433;database=SWalletDB;uid=sa;pwd=f0^wyhMfl*25;TrustServerCertificate=true"
   },
   "Jwt": {
     "Key": "<3<vietnamvodich<3vietnamvodich<3",
