--- a/SWallet-API/SWallet-API.csproj
+++ b/SWallet-API/SWallet-API.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>SWallet_API</RootNamespace>
     <UserSecretsId>fd801b65-9c6e-4fba-8727-0cfa04b52ac4</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
