--- a/SWallet-API/appsettings.json
+++ b/SWallet-API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=160.191.244.210,1433;database=SWalletDB;uid=sa;pwd=f0^wyhMfl*25;Encrypt=False;TrustServerCertificate=true"
+    "DefaultConnection": "Server=160.191.244.210,1433;Database=SWalletDB;User Id=sa;Password=f0^wyhMfl*25;Encrypt=False;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "<3<vietnamvodich<3vietnamvodich<3",
