add Redis, VerifyEmail

--- a/SWallet-API/appsettings.json
+++ b/SWallet-API/appsettings.json
@@ -19,10 +19,12 @@
     "Username": "lenhathuy29042003@gmail.com",
     "Password": "rfgs ohuh zxeo ebpt"
   },
-
   "Cloudinary": {
     "CloudName": "swallet",
     "ApiKey": "535856374516477",
     "ApiSecret": "Vi_sGXv-xojtyOu3oijB9zzmm7s"
+  },
+  "Redis": {
+    "ConnectionString": "redis-10118.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:10118,password=oHzUM6xvekba0PpqSWUerMlc9IGZa5VW"
   }
 }
