Create Campaign with Transaction

--- a/SWallet-API/appsettings.json
+++ b/SWallet-API/appsettings.json
@@ -26,5 +26,11 @@
   },
   "Redis": {
     "ConnectionString": "redis-10118.c295.ap-southeast-1-1.ec2.redns.redis-cloud.com:10118,password=oHzUM6xvekba0PpqSWUerMlc9IGZa5VW"
+  },
+  "Vnpay": {
+    "TmnCode": "8QC9RQ7T", // Ví dụ
+    "HashSecret": "BJ667ZNQ04OEK7CDJFRUI2NGOKZ6S0DJ", // Ví dụ
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html", // Ví dụ URL của môi trường Sandbox
+    "ReturnUrl": "https://localhost:7137/" // Ví dụ
   }
 }
