--- a/SWallet.Repository/SWallet.Repository.csproj
+++ b/SWallet.Repository/SWallet.Repository.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="MailKit" Version="4.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="StackExchange.Redis" Version="2.8.24" />
     <PackageReference Include="VNPAY.NET" Version="8.5.0" />
   </ItemGroup>
