--- a/SWallet-API/appsettings.json
+++ b/SWallet-API/appsettings.json
@@ -31,6 +31,6 @@
     "TmnCode": "8QC9RQ7T", // Ví dụ
     "HashSecret": "BJ667ZNQ04OEK7CDJFRUI2NGOKZ6S0DJ", // Ví dụ
     "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html", // Ví dụ URL của môi trường Sandbox
-    "ReturnUrl": "https://localhost:7137/api/VNPAY/Callback" // Ví dụ
+    "ReturnUrl": "https://swga.vercel.app/" // Ví dụ
   }
 }
