--- a/SWallet-API/appsettings.json
+++ b/SWallet-API/appsettings.json
@@ -6,8 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=160.191.244.210,1433;Database=SWalletDB;User Id=sa;Password=f0^wyhMfl*25;TrustServerCertificate=True;"
+  //},
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=160.191.244.210,1433;Database=SWalletDB;User Id=sa;Password=f0^wyhMfl*25;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=103.162.14.54,1433;Database=SwalletDB;User Id=sa;Password=swallet!2025;TrustServerCertificate=True;"
   },
   "Jwt": {
     "Key": "<3<vietnamvodich<3vietnamvodich<3",
