--- a/SWallet.Repository/SWallet.Repository.csproj
+++ b/SWallet.Repository/SWallet.Repository.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="CloudinaryDotNet" Version="1.27.1" />
     <PackageReference Include="dotenv.net" Version="3.2.1" />
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FirebaseAdmin" Version="3.1.0" />
     <PackageReference Include="MailKit" Version="4.10.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
     <PackageReference Include="QRCoder" Version="1.6.0" />
